--- a/first/templates/calc.html
+++ b/first/templates/calc.html
@@ -5,6 +5,7 @@
     <title>Calculator</title>
 </head>
 <body>
+    {% include 'menu.html' %}
     <h1>{{ name }}</h1>
     <ul>
         <li>Первое число: {{ first }}</li>
