--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -5,6 +5,7 @@
     <title>Main page</title>
 </head>
 <body>
+    {% include 'menu.html' %}
     <h1>{{ name }}</h1>
     <p>Автор сайта: {{ author }}</p>
     <p>Количество страниц: {{ page_count }}</p>
