--- a/first/templates/time.html
+++ b/first/templates/time.html
@@ -5,6 +5,7 @@
     <title>Date and time</title>
 </head>
 <body>
+    {% include 'menu.html' %}
     <h1>{{ name }}</h1>
     <p>Дата: {{ date }}</p>
     <p>Время: {{ time }}</p>
