--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -9,6 +9,8 @@
     <li><a href="/">Главная</a></li>
     <li><a href="/time/">Дата и время</a></li>
     <li><a href="/calc/">Калькулятор</a></li>
+    <li><a href="/expression/">Арифметическое выражение</a></li>
+    <li><a href="/history/">История вычислений</a></li>
     </ul>
 </body>
 </html>
