--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -11,6 +11,9 @@
     <li><a href="/calc/">Калькулятор</a></li>
     <li><a href="/expression/">Арифметическое выражение</a></li>
     <li><a href="/history/">История вычислений</a></li>
+    <li><a href="/delete/">Удалить последнее выражение</a></li>
+    <li><a href="/clear/">Очистить историю выражений</a></li>
+    <li><a href="/new/">Добавить выражение</a></li>
     </ul>
 </body>
 </html>
