--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -7,6 +7,7 @@
 <body>
     <ul>
     <li><a href="/">Главная</a></li>
+    <li><a href="/login/">Логин</a></li>
     <li><a href="/time/">Дата и время</a></li>
     <li><a href="/calc/">Калькулятор</a></li>
     <li><a href="/expression/">Арифметическое выражение</a></li>
@@ -14,6 +15,8 @@
     <li><a href="/delete/">Удалить последнее выражение</a></li>
     <li><a href="/clear/">Очистить историю выражений</a></li>
     <li><a href="/new/">Добавить выражение</a></li>
+    <li><a href="/str2words/">Анализ строки</a></li>
+    <li><a href="/str_history/">История анализов</a></li>
     </ul>
 </body>
 </html>
